# rmf

./: .codeclimate.yml  .codecov.yml  .gitignore  .gitmodules  .travis.yml  3U7W.rmf3.txt  3U7W.txt  BufferConstHandle_8h.html  BufferConstHandle_8h.js  BufferConstHandle_8h__dep__incl.map  BufferConstHandle_8h__dep__incl.md5  BufferConstHandle_8h__incl.map  BufferConstHandle_8h__incl.md5  BufferConstHandle_8h_source.html  BufferHandle_8h.html  BufferHandle_8h__dep__incl.map  BufferHandle_8h__dep__incl.md5  BufferHandle_8h__incl.map  BufferHandle_8h__incl.md5  BufferHandle_8h_source.html  CMakeLists.txt  ChangeLog.md  ChangeLog_8md_source.html  ConstAttributes_8h.html  ConstAttributes_8h.js  ConstAttributes_8h__dep__incl.map  ConstAttributes_8h__dep__incl.md5  ConstAttributes_8h__incl.map  ConstAttributes_8h__incl.md5  ConstAttributes_8h_source.html  ConstDataSetD_8h.html  ConstDataSetD_8h.js  ConstDataSetD_8h__dep__incl.map  ConstDataSetD_8h__dep__incl.md5  ConstDataSetD_8h__incl.map  ConstDataSetD_8h__incl.md5  ConstDataSetD_8h_source.html  ConstFile_8h.html  ConstFile_8h.js  ConstFile_8h__dep__incl.map  (+2372 more)
benchmark/: CMakeLists.txt  Files.cmake  benchmark_rmf.cpp  benchmark_rmf.py  benchmark_rmf_batch.py  benchmark_rmf_python.py  benchmark_size.cpp
doc/: CMakeLists.txt  DecoratorsAndAttributes.md  Developers.md  Doxyfile.in  Executables.md  FileFormat.md  HDF5.md  Installation.md  Library.md  Main.md  MappingToRMF.md  Viewing.md  attributes.md  dot  hdf5.dox  main.dox  mapping.dox  namespace.dox  rmf.dox  rmf.md  rmf_lib.md
include/: CMakeLists.txt  RMF.h
include/RMF/: BufferConstHandle.h  BufferHandle.h  Category.h  CoordinateTransformer.h  Decorator.h  Enum.h  Factory.h  FileConstHandle.h  FileHandle.h  FileLock.h  FrameConstHandle.h  FrameHandle.h  FrameID.h  HDF5ConstAttributes.h  HDF5ConstDataSetD.h  HDF5ConstFile.h  HDF5ConstGroup.h  HDF5DataSetAccessPropertiesD.h  HDF5DataSetCreationPropertiesD.h  HDF5DataSetD.h  HDF5DataSetIndexD.h  HDF5File.h  HDF5Group.h  HDF5MutableAttributes.h  HDF5Object.h  ID.h  Key.h  Label.h  NodeConstHandle.h  NodeHandle.h  NodeID.h  NodeSetConstHandle.h  NodeSetHandle.h  Nullable.h  ReferenceFrame.h  RestoreCurrentFrame.h  SetCurrentFrame.h  TraverseHelper.h  Validator.h  Vector.h  (+24 more)
include/RMF/HDF5/: ConstAttributes.h  ConstDataSetD.h  ConstFile.h  ConstGroup.h  DataSetAccessPropertiesD.h  DataSetCreationPropertiesD.h  DataSetD.h  DataSetIndexD.h  File.h  Group.h  HDF5ConstAttributes.h  HDF5ConstDataSetD.h  HDF5ConstFile.h  HDF5ConstGroup.h  HDF5DataSetAccessPropertiesD.h  HDF5DataSetD.h  HDF5DataSetIndexD.h  HDF5Group.h  HDF5MutableAttributes.h  HDF5Object.h  MutableAttributes.h  Object.h  handle.h  hdf5_handle.h  hdf5_types.h  infrastructure_macros.h  types.h
include/RMF/decorator/: alternatives.h  bond.h  labels.h  provenance.h  representation.h
include/RMF/internal/: AvroSharedData.h  HDF5DataSetCache1D.h  HDF5DataSetCache2D.h  HDF5DataSetCache3D.h  HDF5SharedData.h  ProtoBufSharedData.h  SharedData.h  SharedDataCategory.h  SharedDataData.h  SharedDataData_impl.h  SharedDataFile.h  SharedDataFrames.h  SharedDataHierarchy.h  SharedDataKeys.h  SharedDataLoadedFrame.h  SharedDataPath.h  SharedDataUserData.h  SharedData_impl.h  Transform.h  avro_schemas.h  clone_shared_data.h  errors.h  hash.h  imp_operations.h  intrusive_ptr_object.h  irange.h  large_set_map.h  lazy.h  map.h  paths.h  set.h  shared_data_factories.h  shared_data_ranges.h  small_set_map.h  swig_helpers.h  types.h  use.h  utility.h
plugins/vmd/: CMakeLists.txt  Data.cpp  Data.h  Data_read.cpp  README.md  init.cpp  rmfplugin.cpp  rmfplugin.h
plugins/vmd/include/: molfile_plugin.h
pyext/: CMakeLists.txt  RMF.i
src/: BufferConstHandle.cpp  CMakeLists.txt  CoordinateTransformer.cpp  Enum.cpp  FileConstHandle.cpp  FileHandle.cpp  FrameConstHandle.cpp  FrameHandle.cpp  FrameID.cpp  Key.cpp  NodeConstHandle.cpp  NodeHandle.cpp  NodeID.cpp  ReferenceFrame.cpp  RestoreCurrentFrame.cpp  SetCurrentFrame.cpp  TraverseHelper.cpp  Validator.cpp  config.cpp  decorator_utility.cpp  decorators.cpp  enums.cpp  exceptions.cpp  hdf5_wrapper.cpp  info.cpp  log.cpp  names.cpp  profile.cpp  show_hierarchy.cpp  signature.cpp  utility.cpp  validate.cpp
src/avrocpp/api/: AvroParse.hh  AvroSerialize.hh
src/avrocpp/impl/: Types.cc  Validator.cc
src/backend/: BackwardsIO.cpp  BackwardsIO.h  BackwardsIOBase.h  CMakeLists.txt  IO.cpp  IO.h  IOFactory.h  ImplementSharedData.h  KeyFilter.h  SharedDataAdaptor.h  backward_types.h  shared_data_adaptors.h
src/backend/avro/: AllJSON.h  AvroKeysAndCategories.h  AvroSharedData.cpp  AvroSharedData.h  AvroSharedData.impl.h  AvroSharedData.types.h  CMakeLists.txt  Files.cmake  FrameJSON.h  MultipleAvroFile.cpp  MultipleAvroFile.h  MultipleAvroFileBase.cpp  MultipleAvroFileBase.h  MultipleAvroFileReader.cpp  MultipleAvroFileReader.h  MultipleAvroFileWriter.cpp  MultipleAvroFileWriter.h  (+18 more)
src/decorator/: alternatives.cpp
src/internal/: AvroSharedData.cpp  HDF5SharedData.cpp  ProtoBufSharedData.cpp  SharedData.cpp  SharedDataPath.cpp  Transform.cpp  avro_schemas.cpp  clone_shared_data.h  errors.cpp  paths.cpp  paths.cpp.in  shared_data_equality.h  shared_data_factories.cpp  shared_data_maps.h  utility.cpp
test/: CMakeLists.txt  Files.cmake  expensive_test_signature.py  medium_test_backwards.py  medium_test_signature.py  medium_test_transitory_buffer.py  test_aliases.py  test_all_values.py  test_associations.cpp  test_associations.py  test_avro2_low_level.cpp  test_avro2_validate.cpp  test_backwards.py  test_bad_geometry.py  test_buffer.cpp  test_buffer_io.py  test_bulk.py  test_children.py  test_closing.py  test_copy.py  test_dag.py  test_data_types.py  test_description.py  test_enums.py  test_errors.py  test_external.py  test_features.py  test_file_handle.py  test_file_level.py  test_fill.cpp  test_fill.py  test_frame_comments.py  test_get_wrap.py  test_import.py  test_invalid.py  test_json_encode_decode.cpp  test_late_add_nodes.py  test_locks.py  test_low_level.py  test_multikey.py  (+16 more)
test/input/: final_NPC2007_new.signature  rep_and_geom.signature
(+237 files in other folders)
