FIND_PACKAGE(SWIG REQUIRED)
INCLUDE(${SWIG_USE_FILE})

FIND_PACKAGE(PythonLibs)
INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR/pyext})

SET(CMAKE_SWIG_FLAGS "")

set(RMF_SWIG_FLAGS -castmode)

# -interface python", "-c++", "-naturalvar",
 #              "-fvirtual

SET_SOURCE_FILES_PROPERTIES(RMF.i PROPERTIES CPLUSPLUS ON)
SET_SOURCE_FILES_PROPERTIES(RMF.i PROPERTIES SWIG_FLAGS ${RMF_SWIG_FLAGS})
SWIG_ADD_MODULE(RMF python RMF.i)
SWIG_LINK_LIBRARIES(RMF ${PYTHON_LIBRARIES})
SWIG_LINK_LIBRARIES(RMF RMF)
