FIND_PACKAGE(SWIG REQUIRED)
INCLUDE(${SWIG_USE_FILE})

FIND_PACKAGE(PythonLibs)
INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})



SET(CMAKE_SWIG_FLAGS "-castmode" "-naturalvar" "-Wextra" "-fvirtual"
"-DPySwigIterator=RMF_PySwigIterator" "-c++"
"-DSwigPyIterator=RMF_SwigPyIterator" "-I${PROJECT_SOURCE_DIR}/pyext"
"-DRMFEXPORT")
set(CMAKE_SWIG_OUTDIR "${PROJECT_BINARY_DIR}")
include_directories("${PROJECT_BINARY_DIR}/include"
"${PROJECT_SOURCE_DIR}/include" ${HDF5_INCLUDE_DIRS})

SET_SOURCE_FILES_PROPERTIES(RMF.i PROPERTIES CPLUSPLUS ON)
#SET_SOURCE_FILES_PROPERTIES(RMF.i PROPERTIES SWIGOPT_OUTDIR "${PROJECT_BINARY_DIR}")
#SET_SOURCE_FILES_PROPERTIES(RMF.i PROPERTIES SWIG_FLAGS )
SWIG_ADD_MODULE(RMF python RMF.i)
SWIG_LINK_LIBRARIES(RMF ${PYTHON_LIBRARIES} RMF)

FILE(GLOB swigfiles "*.i")

INSTALL(FILES ${swigfiles} DESTINATION "${CMAKE_INSTALL_PREFIX}/share/RMF/swig")
#INSTALL(FILES ${PROJECT_BINARY_DIR}/RMF.py  DESTINATION ${CMAKE_INSTALL_PYTHONDIR})

INSTALL(TARGETS ${SWIG_MODULE_RMF_REAL_NAME} DESTINATION ${CMAKE_INSTALL_PYTHONDIR})
